syntax = "proto3";

package api;
option go_package = "client";

import "github.com/mesg-foundation/core/service/service.proto";

service Client {
  rpc ListenEvent (ListenEventRequest) returns (stream EventData) {}
  rpc ExecuteTask (ExecuteTaskRequest) returns (ExecuteTaskReply) {}  
  rpc ListenResult (ListenResultRequest) returns (stream ResultData) {}
  rpc StartService (StartServiceRequest) returns (StartServiceReply) {}
  rpc StopService (StopServiceRequest) returns (StopServiceReply) {}
}

message ListenEventRequest {
  service.Service service = 1;
}

message ExecuteTaskRequest {
  service.Service service = 1;
  string taskKey = 2;
  string taskData = 3;
}

message ListenResultRequest {
  service.Service service = 1;
}

message StartServiceRequest {
  service.Service service = 1;
}

message StopServiceRequest {
  service.Service service = 1;
}

message EventData {
  string error = 1;
  string eventKey = 2;
  string eventData = 3;
}

message ExecuteTaskReply {
  string executionID = 1;
  string error = 2;
}

message ResultData {
  string error = 1;
  string taskKey = 2;
  string outputKey = 3;
  string outputData = 4;
}

message StartServiceReply {
  string error = 1;
}

message StopServiceReply {
  string error = 1;
}
